# LOLHelper-Rust

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
lcu-backend/: Cargo.toml
lcu-backend/src/: client.rs  context.rs  errors.rs  event_listener.rs  lib.rs  meta.rs
lcu-backend/src/api/: champ_select.rs  champions.rs  chat.rs  match_history.rs  matchmaking.rs  mod.rs  summoner.rs
lcu-backend/src/events/: champ_select.rs  chat.rs  game_flow.rs  matchmaking.rs  mod.rs  process_control.rs
lcu-cli/: Cargo.toml
lcu-cli/src/: main.rs
src/: app.rs  context.rs  errors.rs  lib.rs  log.rs  log_config.dev.toml  log_config.dev.yml  log_config.toml  log_config.yml  main.rs  types.rs
src/lcu/: api_schema.rs  client.rs  errors.rs  event.rs  event_listener.rs  handler.rs  meta.rs  mod.rs  uri.rs
src/lcu/api/: champ_select.rs  champions.rs  chat.rs  match_history.rs  matchmaking.rs  summoner.rs
src/lcu/events/: champ_select.rs  chat.rs  game_flow.rs  matchmaking.rs  mod.rs
windows/: app.rc
