[package]
name = "lol-helper"
version = "0.1.4"
edition = "2024"

[lints.rust]
dead_code = "allow"

[lib]
name = "lcu_helper"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
eframe = { version = "0.31.1", features = ["persistence"] }
futures-util = "0.3.31"
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["toml_format"] }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-websocket = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.15"
toml = "0.9.11"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[build-dependencies]
embed-resource = "3"

[features]
debug_events = []
