[package]
name = "lol-helper"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace.package]
version = "0.2.4"
edition = "2024"
authors = ["Dragon-GCS"]

[workspace]
members = ["lcu-backend", "lcu-cli"]

[dependencies]
lcu-backend = { path = "lcu-backend" }
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono = "0.4.42"
eframe = { version = "0.33.3", features = ["persistence"] }
toml = "0.9.8"

[workspace.dependencies]
anyhow = "1.0.100"
log = "0.4.29"
log4rs = { version = "1.4.0", features = ["toml_format"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"


[build-dependencies]
embed-resource = "3"

[features]
debug_events = ["lcu-backend/debug_events"]
