[package]
name = "lcu-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
# 使用 workspace 共用依赖
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
reqwest-websocket = "0.5.1"
thiserror = "2.0.17"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
debug_events = []
